--- a/index.html
+++ b/index.html
@@ -16,9 +16,7 @@
 			<section id="gigs">
 				<h2>Komt dat zien</h2>
 				<ul>
-					<li>7 oktober &mdash; Kouter Gent
-					<li>19 november &mdash; Lorem ipsum
-					<li>10 december &mdash; Foo bar baz
+					<li>7 oktober &mdash; <a href="https://www.facebook.com/events/366405780768657">Groen Gent: Laat je zien!</a>
 				</ul>
 			</section>
 			
