--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 			</header>
 			
 			<section id="gigs">
-				<h2>Komt dat zien</h2>
+				<h2>Live</h2>
 				<ul>
 					<li>7 oktober &mdash; <a href="https://www.facebook.com/events/366405780768657">Groen Gent: Laat je zien!</a>
 				</ul>
