add version to stylesheet to prevent caching issues

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Blue Baron</title>
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Amatic+SC|Open+Sans+Condensed:300" />
-        <link rel="stylesheet" href="style.css" />
+        <link rel="stylesheet" href="style.css?v2" />
         <link rel="icon" href="favicon.png" />
     </head>
     <body>
